--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <div class="carousel">
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="https://kraune233.github.io/Hypertext-Concrete-Poem/">
-			<div class="title">1.Hypertext Concrete Poem</div>
+			<a href="【Maat - VR Game】 https://www.bilibili.com/video/BV1yV411N7z2/?share_source=copy_web&vd_source=26b6fb9ff06007a06d19c98e115276d7">
+			<div class="title">1.Maat - VR Game</div>
 			<div class="num">01</div>
 			</a>
 		</div>
@@ -66,7 +66,7 @@
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="https://kraune1228.itch.io/void">
+			<a href="https://www.bilibili.com/video/BV1PM4y1s7EV/?spm_id_from=333.999.0.0">
 			<div class="title">6.Void</div>
 			<div class="num">06</div>
 			</a>
@@ -86,7 +86,7 @@
 </div>
 
 <div class="layout">
-	<div class="box">Bing Yao<br />MA Computational Arts<br />for combining arts and technology.</div>
+	<div class="box">Bing Yao<br />MA Computational Arts<br />for arts and technology.</div>
 </div>
 
 
