added into the template

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="carousel">
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="【Maat - VR Game】 https://www.bilibili.com/video/BV1yV411N7z2/?share_source=copy_web&vd_source=26b6fb9ff06007a06d19c98e115276d7">
+			<a href="https://www.bilibili.com/video/BV1yV411N7z2/?spm_id_from=333.999.0.0">
 			<div class="title">1.Maat - VR Game</div>
 			<div class="num">01</div>
 			</a>
