added into the template

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="carousel-item">
 		<div class="carousel-box">
 			<a href="https://kraune233.github.io/Illustion-of-Life/">
-			<div class="title">2.The Illusion of Life </div>
+			<div class="title">2.Resus - VR Game </div>
 			<div class="num">02</div>
 			</a>
 		</div>
