added into the template

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="https://kraune233.github.io/Illustion-of-Life/">
+			<a href="https://www.bilibili.com/video/BV1N8411S7YZ/?vd_source=e85b2fdeb3dcade500313856c39089ec">
 			<div class="title">2.Resus - VR Game </div>
 			<div class="num">02</div>
 			</a>
