--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="https://kraune233.github.io/Text-Visualization/">
+			<a href="https://www.bilibili.com/video/BV1Zk4y1G73G/">
 			<div class="title">3.Coupling - Digital Art</div>
 			<div class="num">03</div>
 			</a>
@@ -48,7 +48,7 @@
 
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="https://kraune233.github.io/Me-Self-I/">
+			<a href="https://www.bilibili.com/video/BV148411m7JV/?vd_source=e85b2fdeb3dcade500313856c39089ec">
 			<div class="title">4.ME-Self-I - Digital Art</div>
 			<div class="num">04</div>
 			</a>
