added into the template

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 	
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="https://kraune233.github.io/OscControl/">
-			<div class="title">7.Osc-Control</div>
+			<a href="https://kraune233.github.io/Text-Visualization/">
+			<div class="title">7.Genetative Poem</div>
 			<div class="num">07</div>
 			</a>
 		</div>
