--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="carousel">
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="/#">
+			<a href="https://www.bilibili.com/video/BV1dG411R76x/?share_source=copy_web&vd_source=26b6fb9ff06007a06d19c98e115276d7">
 			<div class="title">1.Maat - VR Game</div>
 			<div class="num">01</div>
 			</a>
