--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="carousel">
 	<div class="carousel-item">
 		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV1dG411R76x/?pop_share=1&vd_source=e85b2fdeb3dcade500313856c39089ec">
+			<a href="https://www.bilibili.com/video/BV1N8411S7YZ/?vd_source=e85b2fdeb3dcade500313856c39089ec">
 			<div class="title">1.Maat - VR Game</div>
 			<div class="num">01</div>
 			</a>
