added into the tmeplate

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>WCC Portfolio</title>
+  <title>Online Portfolio by Biying Yao</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto'><link rel="stylesheet" href="./style.css">
 
@@ -14,7 +14,7 @@
 <!-- partial -->
 
 <header>
-	<h1>Biying Yao</h1>
+	<h1></h1>
 
 </header>
 
@@ -72,12 +72,21 @@
 			</a>
 		</div>
 	</div>
-	
+
+	<div class="carousel-item">
+		<div class="carousel-box">
+			<a href="https://www.bilibili.com/video/BV138411k7ua/?spm_id_from=333.337.search-card.all.click&vd_source=e85b2fdeb3dcade500313856c39089ec">
+			<div class="title">7.Decommercialization</div>
+			<div class="num">07</div>
+			</a>
+		</div>
+	</div>
+
 	<div class="carousel-item">
 		<div class="carousel-box">
 			<a href="https://kraune233.github.io/Text-Visualization/">
-			<div class="title">7.Genetative Poem</div>
-			<div class="num">07</div>
+			<div class="title">8.Genetative Poem</div>
+			<div class="num">08</div>
 			</a>
 		</div>
 	</div>
@@ -86,7 +95,7 @@
 </div>
 
 <div class="layout">
-	<div class="box">Bing Yao<br />MA Computational Arts<br />for arts and technology.</div>
+	<div class="box">Bing Yao<br />MA Computational Arts<br />for combining arts and technology.</div>
 </div>
 
 
