--- a/index.html
+++ b/index.html
@@ -2,116 +2,86 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Online Portfolio by Biying Yao</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Roboto'><link rel="stylesheet" href="./style.css">
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!--Refer to:https://codepen.io/supah/pen/xxJMbbg -->
-
 <!-- partial:index.partial.html -->
-<!-- partial -->
+<div class="wrapper">
+  <!-- Wave bg-->
+  <div class="wave-container">
+    <div class="wave -one"></div>
+    <div class="wave -two"></div>
+    <div class="wave -three"></div>
+  </div>
+  <div class="line"></div>
+  <div class="text-wrap">
+    <div class="text"><span>C</span><span>o</span><span>n</span><span>t</span><span>i</span><span>n</span><span>u</span><span>e</span>
+      <div class="main-btn_wrapper">
+        <i class="main-btn fa fa-play" aria-hidden="true">       
 
-<header>
-	<h1></h1>
-
-</header>
-
-<div class="carousel">
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV1dG411R76x/?vd_source=e85b2fdeb3dcade500313856c39089ec">
-			<div class="title">1.Maat - VR Game</div>
-			<div class="num">01</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV1N8411S7YZ/?vd_source=e85b2fdeb3dcade500313856c39089ec">
-			<div class="title">2.Resus - VR Game </div>
-			<div class="num">02</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV1Zk4y1G73G/">
-			<div class="title">3.Coupling - Digital Art</div>
-			<div class="num">03</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV148411m7JV/?vd_source=e85b2fdeb3dcade500313856c39089ec">
-			<div class="title">4.ME-Self-I - Digital Art</div>
-			<div class="num">04</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV1hN4y1B7Q3/?vd_source=e85b2fdeb3dcade500313856c39089ec">
-			<div class="title">5.All I Want for Chirsmas is You - Digital Art</div>
-			<div class="num">05</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV1yV411N7z2/?spm_id_from=333.999.0.0">
-			<div class="title">6.Maat - VR Game2</div>
-			<div class="num">06</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV1PM4y1s7EV/?spm_id_from=333.999.0.0">
-			<div class="title">7.Void</div>
-			<div class="num">07</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://www.bilibili.com/video/BV138411k7ua/?spm_id_from=333.337.search-card.all.click&vd_source=e85b2fdeb3dcade500313856c39089ec">
-			<div class="title">8.Decommercialization</div>
-			<div class="num">08</div>
-			</a>
-		</div>
-	</div>
-
-	<div class="carousel-item">
-		<div class="carousel-box">
-			<a href="https://kraune233.github.io/Text-Visualization/">
-			<div class="title">9.Genetative Poem</div>
-			<div class="num">09</div>
-			</a>
-		</div>
-	</div>
-
-
+        </i>
+      </div>
+    </div>
+  </div>
+  <div class="header">
+    <div class="burger-wrapper">
+      <div class="burger"></div>
+    </div>
+    <div class="logo-text">Biying Yao</div>
+    <div class="back_btn">
+      <div class="circle"></div>
+      <div class="text">Back</div>
+    </div>
+  </div>
+  <div class="nav">
+    <ul class="nav_main">
+      <li> 
+        <a href="Resume.pdf">
+        <div class="nav_link">Resume</div>
+        </a>
+      </li>
+        
+      <li> 
+        <a href="https://space.bilibili.com/484227?spm_id_from=333.788.0.0"> 
+      <div class="nav_link">Bilibili</div>
+        </a>
+      </li>
+      <li> 
+      <a href="https://github.com/Kraune233">  
+      <div class="nav_link">Github</div>
+      </a>
+      </li>
+    </ul>
+    <div class="nav_divider"></div>
+    <ul class="nav_sub">
+    </ul>
+  </div>
+  <div class="dim"></div>
+  <div class="page" id="curator">
+    <div class="curator_title_wrapper"><span></span>      
+      <div class="stripes"> 
+        <a href="src/index.html">
+          <div class="nav_link">Video demo</div>
+          </a>    
+          <a href="Peace.pdf">
+            <div class="nav_link">Writing sample</div>
+          </a>  
+          <a href="Dairy.pdf">
+            <div class="nav_link">Writing sample</div>
+          </a>    
+      </div>  
 </div>
-
-<div class="layout">
-	<div class="box">Bing Yao<br />MA Computational Arts<br />for combining arts and technology.</div>
-</div>
-
-
-<div class="cursor"></div>
-<div class="cursor cursor2"></div>
 <!-- partial -->
-  <script  src="./script.js"></script>
-
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TweenMax.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.0/TimelineMax.min.js'></script><script  src="./script.js"></script>
+<script>
+  document.getElementById('nav_link').addEventListener('click', function(e) {
+    e.preventDefault();
+    window.open("C:\Users\Yao\Desktop\test\src\Resume.pdf");
+  });
+</script>
 </body>
 </html>
