added into the template

--- a/index.html
+++ b/index.html
@@ -65,12 +65,15 @@
         <a href="src/index.html">
           <div class="nav_link">Video demo</div>
           </a>    
+          <a href="苦月亮_ToBeProgressed.pdf">
+            <div class="nav_link">苦月亮_ToBeProgressed</div>
+          </a> 
           <a href="Peace.pdf">
-            <div class="nav_link">Writing sample</div>
+            <div class="nav_link">Writing sample 1</div>
           </a>  
           <a href="Dairy.pdf">
-            <div class="nav_link">Writing sample</div>
-          </a>    
+            <div class="nav_link">Writing sample 2</div>
+          </a>      
       </div>  
 </div>
 <!-- partial -->
