added into the template

--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
       <div class="stripes"> 
         <a href="src/index.html">
           <div class="nav_link">Video demo</div>
-          </a>    
+          </a>  
+          <a href="ComedyInTrash_ToBeProgressed.pdf">
+            <div class="nav_link">而喜剧被丢弃在垃圾桶内_ToBeProgressed</div>
+          </a>   
           <a href="苦月亮_ToBeProgressed.pdf">
             <div class="nav_link">苦月亮_ToBeProgressed</div>
           </a> 
